# src/main/java/de/openaqua/fcbackend/entities/MonitorStatus.java
@@ -1,16 +1,0 @@
-package de.openaqua.fcbackend.entities;
-
-public enum MonitorStatus {
-  OK("OK"), FAILURE("FAILURE"), UNKNOWN("UNKNOWN");
-
-  private final String text;
-
-  MonitorStatus(final String text) {
-    this.text = text;
-  }
-
-  @Override
-  public String toString() {
-    return text;
-  }
-}
